Intermittent /offscreen-canvas/fill-and-stroke-styles/2d.gradient.radial.nonfinite.html | application crashed [@ js::ContextChecks::check(class JSString *,int) + 0x62]
Categories
(Core :: JavaScript Engine, defect, P2)
Tracking
()
People
(Reporter: intermittent-bug-filer, Assigned: tcampbell)
References
Details
(Keywords: crash, intermittent-failure)
Crash Data
Attachments
(1 file)
Filed by: apavel [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=287268711&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/MtPtx_dnQ9y35ILJ8Lyn5A/runs/0/artifacts/public/logs/live_backing.log
[task 2020-02-03T01:40:39.582Z] 01:40:39 INFO - TEST-START | /offscreen-canvas/fill-and-stroke-styles/2d.gradient.radial.nonfinite.html
[task 2020-02-03T01:40:39.587Z] 01:40:39 INFO - Closing window 683
[task 2020-02-03T01:40:39.646Z] 01:40:39 INFO - PID 8184 | ###!!! [Parent][RunMessage] Error: Channel closing: too late to send/recv, messages will be lost
[task 2020-02-03T01:40:40.134Z] 01:40:40 INFO - PID 8184 | JavaScript error: , line 0: uncaught exception: out of memory
[task 2020-02-03T01:40:40.134Z] 01:40:40 INFO - PID 8184 | JavaScript error: , line 0: uncaught exception: out of memory
[task 2020-02-03T01:40:40.134Z] 01:40:40 INFO - PID 8184 | Hit MOZ_CRASH([unhandlable oom] GetterSetterWriteBarrierPost) at z:/build/build/src/js/src/vm/JSContext.cpp:1556
[task 2020-02-03T01:40:45.098Z] 01:40:45 INFO - PID 8184 | A content process crashed and MOZ_CRASHREPORTER_SHUTDOWN is set, shutting down
[task 2020-02-03T01:41:13.875Z] 01:41:13 INFO - PROCESS-CRASH | /offscreen-canvas/fill-and-stroke-styles/2d.gradient.radial.nonfinite.html | application crashed [@ js::ContextChecks::check(class JSString *,int) + 0x62]
[task 2020-02-03T01:41:13.875Z] 01:41:13 INFO - Crash dump filename: c:\users\task_1580691451\appdata\local\temp\tmp5ahyxg.mozrunner\minidumps\e0387fba-d8b0-4869-aed5-8e3cf6c9d258.dmp
[task 2020-02-03T01:41:13.875Z] 01:41:13 INFO - Operating system: Windows NT
[task 2020-02-03T01:41:13.875Z] 01:41:13 INFO - 10.0.17134
[task 2020-02-03T01:41:13.875Z] 01:41:13 INFO - CPU: amd64
[task 2020-02-03T01:41:13.875Z] 01:41:13 INFO - family 6 model 85 stepping 4
[task 2020-02-03T01:41:13.875Z] 01:41:13 INFO - 8 CPUs
[task 2020-02-03T01:41:13.876Z] 01:41:13 INFO -
[task 2020-02-03T01:41:13.876Z] 01:41:13 INFO - GPU: UNKNOWN
[task 2020-02-03T01:41:13.876Z] 01:41:13 INFO -
[task 2020-02-03T01:41:13.876Z] 01:41:13 INFO - Crash reason: EXCEPTION_ACCESS_VIOLATION_READ
[task 2020-02-03T01:41:13.876Z] 01:41:13 INFO - Crash address: 0x0
[task 2020-02-03T01:41:13.876Z] 01:41:13 INFO - Assertion: Unknown assertion type 0x00000000
[task 2020-02-03T01:41:13.876Z] 01:41:13 INFO - Process uptime: 3 seconds
[task 2020-02-03T01:41:13.876Z] 01:41:13 INFO -
[task 2020-02-03T01:41:13.876Z] 01:41:13 INFO - Thread 0 (crashed)
[task 2020-02-03T01:41:13.876Z] 01:41:13 INFO - 0 xul.dll!void js::ContextChecks::check(class JSString *,int) + 0x62
[task 2020-02-03T01:41:13.876Z] 01:41:13 INFO - rax = 0x0000000000000000 rdx = 0x0000000000000000
[task 2020-02-03T01:41:13.876Z] 01:41:13 INFO - rcx = 0x00000068369fee90 rbx = 0x0000000000000000
[task 2020-02-03T01:41:13.876Z] 01:41:13 INFO - rsi = 0x00000068369fef20 rdi = 0x00000068369fee90
[task 2020-02-03T01:41:13.876Z] 01:41:13 INFO - rbp = 0x000000000000000b rsp = 0x00000068369fedf0
[task 2020-02-03T01:41:13.876Z] 01:41:13 INFO - r8 = 0x0000000000000000 r9 = 0x00007ffd98c00000
[task 2020-02-03T01:41:13.876Z] 01:41:13 INFO - r10 = 0x000002183b768e08 r11 = 0x00000218358f0009
[task 2020-02-03T01:41:13.876Z] 01:41:13 INFO - r12 = 0x00000068369ff2c0 r13 = 0x00000068369ff290
[task 2020-02-03T01:41:13.876Z] 01:41:13 INFO - r14 = 0x0000000000000019 r15 = 0x0000000000000019
[task 2020-02-03T01:41:13.877Z] 01:41:13 INFO - rip = 0x00007ffd57d3e452
[task 2020-02-03T01:41:13.877Z] 01:41:13 INFO - Found by: given as instruction pointer in context
[task 2020-02-03T01:41:13.877Z] 01:41:13 INFO - 1 xul.dll!void js::ContextChecks::check(class JS::Value const &,int) + 0x205
[task 2020-02-03T01:41:13.877Z] 01:41:13 INFO - rbx = 0x0000000000000000 rbp = 0x000000000000000b
[task 2020-02-03T01:41:13.877Z] 01:41:13 INFO - rsp = 0x00000068369fee30 r12 = 0x00000068369ff2c0
[task 2020-02-03T01:41:13.877Z] 01:41:13 INFO - r13 = 0x00000068369ff290 r14 = 0x0000000000000019
[task 2020-02-03T01:41:13.877Z] 01:41:13 INFO - r15 = 0x0000000000000019 rip = 0x00007ffd57d3e245
[task 2020-02-03T01:41:13.877Z] 01:41:13 INFO - Found by: call frame info
[task 2020-02-03T01:41:13.877Z] 01:41:13 INFO - 2 xul.dll!void JSContext::setPendingException(class JS::Handle<class JS::Value>,class JS::Handle<class js::SavedFrame *>) + 0x2c2
[task 2020-02-03T01:41:13.877Z] 01:41:13 INFO - rbx = 0x0000000000000000 rbp = 0x000000000000000b
[task 2020-02-03T01:41:13.877Z] 01:41:13 INFO - rsp = 0x00000068369fee70 r12 = 0x00000068369ff2c0
[task 2020-02-03T01:41:13.877Z] 01:41:13 INFO - r13 = 0x00000068369ff290 r14 = 0x0000000000000019
[task 2020-02-03T01:41:13.877Z] 01:41:13 INFO - r15 = 0x0000000000000019 rip = 0x00007ffd582af832
[task 2020-02-03T01:41:13.877Z] 01:41:13 INFO - Found by: call frame info
[task 2020-02-03T01:41:13.877Z] 01:41:13 INFO - 3 xul.dll!void js::ReportOutOfMemory(struct JSContext *) + 0x313
[task 2020-02-03T01:41:13.877Z] 01:41:13 INFO - rbx = 0x0000000000000000 rbp = 0x000000000000000b
[task 2020-02-03T01:41:13.877Z] 01:41:13 INFO - rsp = 0x00000068369feee0 r12 = 0x00000068369ff2c0
[task 2020-02-03T01:41:13.877Z] 01:41:13 INFO - r13 = 0x00000068369ff290 r14 = 0x0000000000000019
[task 2020-02-03T01:41:13.878Z] 01:41:13 INFO - r15 = 0x0000000000000019 rip = 0x00007ffd58246352
[task 2020-02-03T01:41:13.878Z] 01:41:13 INFO - Found by: call frame info
[task 2020-02-03T01:41:13.878Z] 01:41:13 INFO - 4 xul.dll!void * JSRuntime::onOutOfMemory(enum js::AllocFunction,uint64_t,uint64_t,void *,struct JSContext *) + 0x1d3
[task 2020-02-03T01:41:13.878Z] 01:41:13 INFO - rbx = 0x0000000000000000 rbp = 0x000000000000000b
[task 2020-02-03T01:41:13.878Z] 01:41:13 INFO - rsp = 0x00000068369fef60 r12 = 0x00000068369ff2c0
[task 2020-02-03T01:41:13.878Z] 01:41:13 INFO - r13 = 0x00000068369ff290 r14 = 0x0000000000000019
[task 2020-02-03T01:41:13.878Z] 01:41:13 INFO - r15 = 0x0000000000000019 rip = 0x00007ffd584f1563
[task 2020-02-03T01:41:13.878Z] 01:41:13 INFO - Found by: call frame info
[task 2020-02-03T01:41:13.878Z] 01:41:13 INFO - 5 xul.dll!void * JSContext::onOutOfMemory(enum js::AllocFunction,uint64_t,uint64_t,void *) + 0xbb
[task 2020-02-03T01:41:13.878Z] 01:41:13 INFO - rbx = 0x0000000000000000 rbp = 0x000000000000000b
[task 2020-02-03T01:41:13.878Z] 01:41:13 INFO - rsp = 0x00000068369fefc0 r12 = 0x00000068369ff2c0
[task 2020-02-03T01:41:13.878Z] 01:41:13 INFO - r13 = 0x00000068369ff290 r14 = 0x0000000000000019
[task 2020-02-03T01:41:13.878Z] 01:41:13 INFO - r15 = 0x0000000000000019 rip = 0x00007ffd57cc9fbb
[task 2020-02-03T01:41:13.878Z] 01:41:13 INFO - Found by: call frame info
[task 2020-02-03T01:41:13.878Z] 01:41:13 INFO - 6 xul.dll!unsigned char * js::MallocProvider<struct JSContext>::pod_arena_malloc<unsigned char>(uint64_t,uint64_t) + 0xac
[task 2020-02-03T01:41:13.878Z] 01:41:13 INFO - rbx = 0x0000000000000000 rbp = 0x000000000000000b
[task 2020-02-03T01:41:13.878Z] 01:41:13 INFO - rsp = 0x00000068369ff000 r12 = 0x00000068369ff2c0
[task 2020-02-03T01:41:13.879Z] 01:41:13 INFO - r13 = 0x00000068369ff290 r14 = 0x0000000000000019
[task 2020-02-03T01:41:13.879Z] 01:41:13 INFO - r15 = 0x0000000000000019 rip = 0x00007ffd57ccbdac
[task 2020-02-03T01:41:13.879Z] 01:41:13 INFO - Found by: call frame info
[task 2020-02-03T01:41:13.879Z] 01:41:13 INFO - 7 xul.dll!class JSLinearString * js::NewStringCopyNDontDeflate<0,unsigned char>(struct JSContext *,unsigned char const *,uint64_t) + 0x5d7
[task 2020-02-03T01:41:13.879Z] 01:41:13 INFO - rbx = 0x0000000000000000 rbp = 0x000000000000000b
[task 2020-02-03T01:41:13.879Z] 01:41:13 INFO - rsp = 0x00000068369ff060 r12 = 0x00000068369ff2c0
[task 2020-02-03T01:41:13.879Z] 01:41:13 INFO - r13 = 0x00000068369ff290 r14 = 0x0000000000000019
[task 2020-02-03T01:41:13.879Z] 01:41:13 INFO - r15 = 0x0000000000000019 rip = 0x00007ffd5863f107
[task 2020-02-03T01:41:13.879Z] 01:41:13 INFO - Found by: call frame info
[task 2020-02-03T01:41:13.879Z] 01:41:13 INFO - 8 xul.dll!static unsigned int mozilla::detail::HashTable<class js::AtomStateEntry const,struct mozilla::HashSet<class js::AtomStateEntry,struct js::AtomHasher,class js::SystemAllocPolicy>::SetHashPolicy,class js::SystemAllocPolicy>::prepareHash(struct js::AtomHasher::Lookup const &) + 0x2213
[task 2020-02-03T01:41:13.879Z] 01:41:13 INFO - rbx = 0x0000000000000000 rbp = 0x000000000000000b
[task 2020-02-03T01:41:13.879Z] 01:41:13 INFO - rsp = 0x00000068369ff0e0 r12 = 0x00000068369ff2c0
[task 2020-02-03T01:41:13.879Z] 01:41:13 INFO - r13 = 0x00000068369ff290 r14 = 0x0000000000000019
[task 2020-02-03T01:41:13.879Z] 01:41:13 INFO - r15 = 0x0000000000000019 rip = 0x00007ffd582e42b3
[task 2020-02-03T01:41:13.879Z] 01:41:13 INFO - Found by: call frame info
[task 2020-02-03T01:41:13.879Z] 01:41:13 INFO - 9 xul.dll!class JSAtom * js::Atomize(struct JSContext *,char const *,uint64_t,enum js::PinningBehavior,class mozilla::Maybe<unsigned int> const &) + 0x2a6e
[task 2020-02-03T01:41:13.879Z] 01:41:13 INFO - rbx = 0x0000000000000000 rbp = 0x000000000000000b
[task 2020-02-03T01:41:13.880Z] 01:41:13 INFO - rsp = 0x00000068369ff200 r12 = 0x00000068369ff2c0
[task 2020-02-03T01:41:13.880Z] 01:41:13 INFO - r13 = 0x00000068369ff290 r14 = 0x0000000000000019
[task 2020-02-03T01:41:13.880Z] 01:41:13 INFO - r15 = 0x0000000000000019 rip = 0x00007ffd5825bd6e
[task 2020-02-03T01:41:13.880Z] 01:41:13 INFO - Found by: call frame info
[task 2020-02-03T01:41:13.880Z] 01:41:13 INFO - 10 xul.dll!bool JSRuntime::initializeAtoms(struct JSContext *) + 0x822
[task 2020-02-03T01:41:13.880Z] 01:41:13 INFO - rbx = 0x0000000000000000 rbp = 0x000000000000000b
[task 2020-02-03T01:41:13.880Z] 01:41:13 INFO - rsp = 0x00000068369ff3c0 r12 = 0x00000068369ff2c0
[task 2020-02-03T01:41:13.880Z] 01:41:13 INFO - r13 = 0x00000068369ff290 r14 = 0x0000000000000019
[task 2020-02-03T01:41:13.880Z] 01:41:13 INFO - r15 = 0x0000000000000019 rip = 0x00007ffd58258b82
[task 2020-02-03T01:41:13.880Z] 01:41:13 INFO - Found by: call frame info
[task 2020-02-03T01:41:13.880Z] 01:41:13 INFO - 11 xul.dll!bool JS::InitSelfHostedCode(struct JSContext *) + 0x115
[task 2020-02-03T01:41:13.880Z] 01:41:13 INFO - rbx = 0x0000000000000000 rbp = 0x000000000000000b
[task 2020-02-03T01:41:13.880Z] 01:41:13 INFO - rsp = 0x00000068369ff450 r12 = 0x00000068369ff2c0
[task 2020-02-03T01:41:13.880Z] 01:41:13 INFO - r13 = 0x00000068369ff290 r14 = 0x0000000000000019
[task 2020-02-03T01:41:13.880Z] 01:41:13 INFO - r15 = 0x0000000000000019 rip = 0x00007ffd57ed8a75
[task 2020-02-03T01:41:13.880Z] 01:41:13 INFO - Found by: call frame info
[task 2020-02-03T01:41:13.880Z] 01:41:13 INFO - 12 xul.dll!enum nsresult XPCJSContext::Initialize + 0x7a4
[task 2020-02-03T01:41:13.880Z] 01:41:13 INFO - rbx = 0x0000000000000000 rbp = 0x000000000000000b
[task 2020-02-03T01:41:13.880Z] 01:41:13 INFO - rsp = 0x00000068369ff490 r12 = 0x00000068369ff2c0
[task 2020-02-03T01:41:13.880Z] 01:41:13 INFO - r13 = 0x00000068369ff290 r14 = 0x0000000000000019
[task 2020-02-03T01:41:13.881Z] 01:41:13 INFO - r15 = 0x0000000000000019 rip = 0x00007ffd4f0b77e4
[task 2020-02-03T01:41:13.881Z] 01:41:13 INFO - Found by: call frame info
[task 2020-02-03T01:41:13.881Z] 01:41:13 INFO - 13 xul.dll!static class XPCJSContext * XPCJSContext::NewXPCJSContext + 0x49
[task 2020-02-03T01:41:13.881Z] 01:41:13 INFO - rbx = 0x0000000000000000 rbp = 0x000000000000000b
[task 2020-02-03T01:41:13.881Z] 01:41:13 INFO - rsp = 0x00000068369ff580 r12 = 0x00000068369ff2c0
[task 2020-02-03T01:41:13.881Z] 01:41:13 INFO - r13 = 0x00000068369ff290 r14 = 0x0000000000000019
[task 2020-02-03T01:41:13.881Z] 01:41:13 INFO - r15 = 0x0000000000000019 rip = 0x00007ffd4f0b84a9
[task 2020-02-03T01:41:13.881Z] 01:41:13 INFO - Found by: call frame info
[task 2020-02-03T01:41:13.881Z] 01:41:13 INFO - 14 xul.dll!static void nsXPConnect::InitJSContext + 0x11
[task 2020-02-03T01:41:13.881Z] 01:41:13 INFO - rbx = 0x0000000000000000 rbp = 0x000000000000000b
[task 2020-02-03T01:41:13.881Z] 01:41:13 INFO - rsp = 0x00000068369ff5c0 r12 = 0x00000068369ff2c0
[task 2020-02-03T01:41:13.881Z] 01:41:13 INFO - r13 = 0x00000068369ff290 r14 = 0x0000000000000019
[task 2020-02-03T01:41:13.881Z] 01:41:13 INFO - r15 = 0x0000000000000019 rip = 0x00007ffd4f150941
[task 2020-02-03T01:41:13.881Z] 01:41:13 INFO - Found by: call frame info
[task 2020-02-03T01:41:13.881Z] 01:41:13 INFO - 15 xul.dll!NS_InitXPCOM + 0xfa3
[task 2020-02-03T01:41:13.881Z] 01:41:13 INFO - rbx = 0x0000000000000000 rbp = 0x000000000000000b
[task 2020-02-03T01:41:13.881Z] 01:41:13 INFO - rsp = 0x00000068369ff5f0 r12 = 0x00000068369ff2c0
[task 2020-02-03T01:41:13.881Z] 01:41:13 INFO - r13 = 0x00000068369ff290 r14 = 0x0000000000000019
[task 2020-02-03T01:41:13.881Z] 01:41:13 INFO - r15 = 0x0000000000000019 rip = 0x00007ffd4d8f4773
[task 2020-02-03T01:41:13.881Z] 01:41:13 INFO - Found by: call frame info
[task 2020-02-03T01:41:13.882Z] 01:41:13 INFO - 16 xul.dll!enum nsresult XRE_InitEmbedding2(class nsIFile *,class nsIFile *,class nsIDirectoryServiceProvider *) + 0x127
[task 2020-02-03T01:41:13.882Z] 01:41:13 INFO - rbx = 0x0000000000000000 rbp = 0x000000000000000b
[task 2020-02-03T01:41:13.882Z] 01:41:13 INFO - rsp = 0x00000068369ff740 r12 = 0x00000068369ff2c0
[task 2020-02-03T01:41:13.882Z] 01:41:13 INFO - r13 = 0x00000068369ff290 r14 = 0x0000000000000019
[task 2020-02-03T01:41:13.882Z] 01:41:13 INFO - r15 = 0x0000000000000019 rip = 0x00007ffd57aabd27
[task 2020-02-03T01:41:13.882Z] 01:41:13 INFO - Found by: call frame info
[task 2020-02-03T01:41:13.882Z] 01:41:13 INFO - 17 xul.dll!void mozilla::ipc::ScopedXREEmbed::Start + 0x376
[task 2020-02-03T01:41:13.882Z] 01:41:13 INFO - rbx = 0x0000000000000000 rbp = 0x000000000000000b
[task 2020-02-03T01:41:13.882Z] 01:41:13 INFO - rsp = 0x00000068369ff790 r12 = 0x00000068369ff2c0
[task 2020-02-03T01:41:13.882Z] 01:41:13 INFO - r13 = 0x00000068369ff290 r14 = 0x0000000000000019
[task 2020-02-03T01:41:13.882Z] 01:41:13 INFO - r15 = 0x0000000000000019 rip = 0x00007ffd4e717f16
[task 2020-02-03T01:41:13.882Z] 01:41:13 INFO - Found by: call frame info
[task 2020-02-03T01:41:13.882Z] 01:41:13 INFO - 18 xul.dll!virtual bool mozilla::dom::ContentProcess::Init(int,char * * const) + 0xa62
[task 2020-02-03T01:41:13.882Z] 01:41:13 INFO - rbx = 0x0000000000000000 rbp = 0x000000000000000b
[task 2020-02-03T01:41:13.882Z] 01:41:13 INFO - rsp = 0x00000068369ff7f0 r12 = 0x00000068369ff2c0
[task 2020-02-03T01:41:13.882Z] 01:41:13 INFO - r13 = 0x00000068369ff290 r14 = 0x0000000000000019
[task 2020-02-03T01:41:13.883Z] 01:41:13 INFO - r15 = 0x0000000000000019 rip = 0x00007ffd5466b6b2
[task 2020-02-03T01:41:13.883Z] 01:41:13 INFO - Found by: call frame info
[task 2020-02-03T01:41:13.883Z] 01:41:13 INFO - 19 xul.dll!enum nsresult XRE_InitChildProcess(int,char * * const,struct XREChildData const *) + 0xbde
[task 2020-02-03T01:41:13.883Z] 01:41:13 INFO - rbx = 0x0000000000000000 rbp = 0x000000000000000b
[task 2020-02-03T01:41:13.883Z] 01:41:13 INFO - rsp = 0x00000068369ff950 r12 = 0x00000068369ff2c0
[task 2020-02-03T01:41:13.883Z] 01:41:13 INFO - r13 = 0x00000068369ff290 r14 = 0x0000000000000019
[task 2020-02-03T01:41:13.883Z] 01:41:13 INFO - r15 = 0x0000000000000019 rip = 0x00007ffd57aacd0e
[task 2020-02-03T01:41:13.883Z] 01:41:13 INFO - Found by: call frame info
[task 2020-02-03T01:41:13.883Z] 01:41:13 INFO - 20 firefox.exe!int NS_internal_main(int,char * *,char * *) + 0x1dc
[task 2020-02-03T01:41:13.883Z] 01:41:13 INFO - rbx = 0x0000000000000000 rbp = 0x000000000000000b
[task 2020-02-03T01:41:13.883Z] 01:41:13 INFO - rsp = 0x00000068369ffbd0 r12 = 0x00000068369ff2c0
[task 2020-02-03T01:41:13.883Z] 01:41:13 INFO - r13 = 0x00000068369ff290 r14 = 0x0000000000000019
[task 2020-02-03T01:41:13.883Z] 01:41:13 INFO - r15 = 0x0000000000000019 rip = 0x00007ff78ecf1a9c
[task 2020-02-03T01:41:13.883Z] 01:41:13 INFO - Found by: call frame info
[task 2020-02-03T01:41:13.883Z] 01:41:13 INFO - 21 firefox.exe!wmain + 0x61c
[task 2020-02-03T01:41:13.883Z] 01:41:13 INFO - rbx = 0x0000000000000000 rbp = 0x000000000000000b
[task 2020-02-03T01:41:13.883Z] 01:41:13 INFO - rsp = 0x00000068369ffdb0 r12 = 0x00000068369ff2c0
[task 2020-02-03T01:41:13.883Z] 01:41:13 INFO - r13 = 0x00000068369ff290 r14 = 0x0000000000000019
[task 2020-02-03T01:41:13.883Z] 01:41:13 INFO - r15 = 0x0000000000000019 rip = 0x00007ff78ecf161c
[task 2020-02-03T01:41:13.883Z] 01:41:13 INFO - Found by: call frame info
[task 2020-02-03T01:41:13.883Z] 01:41:13 INFO - 22 firefox.exe!__scrt_common_main_seh() [exe_common.inl : 288 + 0x22]
[task 2020-02-03T01:41:13.883Z] 01:41:13 INFO - rbx = 0x0000000000000000 rbp = 0x000000000000000b
[task 2020-02-03T01:41:13.883Z] 01:41:13 INFO - rsp = 0x00000068369ffe80 r12 = 0x00000068369ff2c0
[task 2020-02-03T01:41:13.884Z] 01:41:13 INFO - r13 = 0x00000068369ff290 r14 = 0x0000000000000019
[task 2020-02-03T01:41:13.884Z] 01:41:13 INFO - r15 = 0x0000000000000019 rip = 0x00007ff78ed41ba8
[task 2020-02-03T01:41:13.884Z] 01:41:13 INFO - Found by: call frame info
[task 2020-02-03T01:41:13.884Z] 01:41:13 INFO - 23 kernel32.dll!BaseThreadInitThunk + 0x14
[task 2020-02-03T01:41:13.884Z] 01:41:13 INFO - rbx = 0x0000000000000000 rbp = 0x000000000000000b
[task 2020-02-03T01:41:13.884Z] 01:41:13 INFO - rsp = 0x00000068369ffec0 r12 = 0x00000068369ff2c0
[task 2020-02-03T01:41:13.884Z] 01:41:13 INFO - r13 = 0x00000068369ff290 r14 = 0x0000000000000019
[task 2020-02-03T01:41:13.884Z] 01:41:13 INFO - r15 = 0x0000000000000019 rip = 0x00007ffd9fbd3034
[task 2020-02-03T01:41:13.884Z] 01:41:13 INFO - Found by: call frame info
[task 2020-02-03T01:41:13.884Z] 01:41:13 INFO - 24 ntdll.dll!SdbpCheckMatchingFiles + 0x81
[task 2020-02-03T01:41:13.884Z] 01:41:13 INFO - rbx = 0x0000000000000000 rbp = 0x000000000000000b
[task 2020-02-03T01:41:13.884Z] 01:41:13 INFO - rsp = 0x00000068369ffef0 r12 = 0x00000068369ff2c0
[task 2020-02-03T01:41:13.884Z] 01:41:13 INFO - r13 = 0x00000068369ff290 r14 = 0x0000000000000019
[task 2020-02-03T01:41:13.884Z] 01:41:13 INFO - r15 = 0x0000000000000019 rip = 0x00007ffd9fd21461
[task 2020-02-03T01:41:13.884Z] 01:41:13 INFO - Found by: call frame info
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 3•6 years ago
|
||
This is a normal OOM while setting up a content process. The Spidermonkey bug is that the OOM reporting machinery shouldn't run when the runtime is partially initialized.
| Assignee | ||
Comment 4•6 years ago
|
||
If we OOM during early startup, the JSAtomState::outOfMemory atom may not be
available yet. In this case, return early to avoid setting a bogus exception
and tripping assertions.
Comment 6•6 years ago
|
||
| bugherder | ||
Updated•6 years ago
|
Description
•