Bug 1612767 - Check outOfMemory atom is available in js::ReportOutOfMemory. r=jandem

If we OOM during early startup, the JSAtomState::outOfMemory atom may not be
available yet. In this case, return early to avoid setting a bogus exception
and tripping assertions.

Differential Revision: https://phabricator.services.mozilla.com/D61777

--HG--
extra : moz-landing-system : lando